# Spectrum

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  spectrum.jks
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hypermagik/spectrum/: Constants.kt  IQRecorder.kt  MainActivity.kt  Permissions.kt  Preferences.kt  PreferencesWrapper.kt
app/src/main/java/com/hypermagik/spectrum/analyzer/: Analyzer.kt  AnalyzerView.kt  Channel.kt  FFT.kt  GestureHandler.kt  Grid.kt  Info.kt  Peaks.kt  Texture.kt  Waterfall.kt
app/src/main/java/com/hypermagik/spectrum/analyzer/fft/: FFT.kt  Grid.kt  Peaks.kt
app/src/main/java/com/hypermagik/spectrum/demodulator/: AM.kt  AudioSink.kt  Demodulator.kt  DemodulatorType.kt  FM.kt  RDS.kt  Tetra.kt  WFM.kt
app/src/main/java/com/hypermagik/spectrum/source/: BladeRF.kt  IQFile.kt  RTLSDR.kt  Source.kt  SourceType.kt  ToneGenerator.kt
app/src/main/java/com/hypermagik/spectrum/utils/: Throttle.kt  Utils.kt
app/src/main/res/color/: item_text.xml
app/src/main/res/drawable/: top_border.xml
app/src/main/res/layout/: activity_main.xml  app_bar_main.xml  recorder_settings.xml  set_frequency.xml
app/src/main/res/menu/: demodulator.xml  demodulator_am.xml  demodulator_fm.xml  demodulator_tetra.xml  demodulator_wfm.xml  fft.xml  main.xml  source_bladerf.xml  source_iq_file.xml  source_rtlsdr.xml  source_tone_generator.xml  tone_generator.xml  waterfall.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: usb_device_filter.xml
benchmark/: build.gradle.kts
benchmark/src/androidTest/: AndroidManifest.xml
benchmark/src/androidTest/java/com/hypermagik/spectrum/benchmark/: CW.kt  Demodulation.kt  FFT.kt  Filters.kt  GL.kt  GLES.kt  GPUOffload.kt  IQConverter.kt  Noise.kt  Shifter.kt  WFM.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts  proguard-rules.pro
lib/src/androidTest/java/com/hypermagik/spectrum/lib/: Decimators.kt  Test.kt
lib/src/main/cpp/: CMakeLists.txt  GLES.cpp  Tetra.cpp  Vulkan.cpp  VulkanShiftDecimator.cpp
lib/src/main/cpp/osmo-tetra/: tetra_common.c  tetra_common.h  tetra_upper_mac.c
lib/src/main/cpp/osmo-tetra/lower_mac/: tetra_lower_mac.c
lib/src/main/cpp/osmo-tetra/osmocom/core/: bits.c  bits.h  conv.c  msgb.c  msgb.h  prim.h  talloc.h  utils.c  utils.h
lib/src/main/cpp/osmo-tetra/phy/: tetra_burst.c
lib/src/main/cpp/vulkan/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Functions.cpp  Functions.h  Pipeline.cpp  Pipeline.h  Utils.cpp  Utils.h  Wrappers.h
lib/src/main/cpp/vulkan-loader/: Hook.c  Loader.cpp  Loader.h
lib/src/main/cpp/vulkan/dsp/: ShiftDecimator.h  ShiftDecimatorMultiQueue.cpp  ShiftDecimatorMultiQueue.h  ShiftDecimatorSingleQueue.cpp  ShiftDecimatorSingleQueue.h
lib/src/main/cpp/vulkan/dsp/pipelines/: Decimator.cpp  Decimator.h  Shifter.cpp  Shifter.h
lib/src/main/java/com/hypermagik/spectrum/lib/clock/: FD.kt  MM.kt
lib/src/main/java/com/hypermagik/spectrum/lib/data/: Complex32.kt  SampleBuffer.kt  SampleFIFO.kt  SampleType.kt
lib/src/main/java/com/hypermagik/spectrum/lib/data/converter/: IQConverter.kt  IQConverter12SignedPadded.kt  IQConverter32Float.kt  IQConverter8Signed.kt  IQConverter8Unsigned.kt  IQConverterF32.kt  IQConverterFactory.kt  IQConverterS12P.kt  IQConverterS8.kt  IQConverterU8.kt
lib/src/main/java/com/hypermagik/spectrum/lib/demod/: Quadrature.kt
lib/src/main/java/com/hypermagik/spectrum/lib/devices/bladerf/: BladeRF.kt  Constants.kt  INA219.kt  NIOS.kt  RFIC.kt
lib/src/main/java/com/hypermagik/spectrum/lib/devices/rtlsdr/: Constants.kt  I2CMaster.kt  R820T.kt  RTL2832U.kt  RTLSDR.kt  Tuner.kt
lib/src/main/java/com/hypermagik/spectrum/lib/digital/: BinarySlicer.kt  BitUnpacker.kt  DQPSK.kt  DifferentialDecoder.kt  Tetra.kt
lib/src/main/java/com/hypermagik/spectrum/lib/dsp/: AGC.kt  BinarySlicer.kt  Costas.kt  Decimator.kt  Deemphasis.kt  Delay.kt  DifferentialDecoder.kt  FFT.kt  FIR.kt  FIRC.kt  FLL.kt  FastAGC.kt  LowPassFIR.kt  MM.kt  PCL.kt  PLL.kt  Polyphase.kt  Resampler.kt  RootRaisedCosine.kt  Shifter.kt  Taps.kt  Utils.kt  Window.kt  WindowedSinc.kt
lib/src/main/java/com/hypermagik/spectrum/lib/gpu/: Debug.kt  GLES.kt  GLESShiftDecimator.kt  GPUAPI.kt  Vulkan.kt  VulkanShiftDecimator.kt
lib/src/main/java/com/hypermagik/spectrum/lib/loop/: Costas.kt  FLL.kt  PCL.kt  PLL.kt
lib/src/main/java/com/hypermagik/spectrum/lib/utils/: Utils.kt
lib/src/main/res/raw/: decimator.glsl  shifter.glsl
lib/src/main/shaders/: decimator.comp  shifter.comp
